docs: improve swagger
